syntax = "proto3";

option go_package = "github.com/yourusername/p3/proto";

package media;

// Media upload service
service MediaUpload {
  // Bidirectional streaming for video upload
  rpc UploadVideo(stream VideoChunk) returns (stream UploadResponse);
}

// Video chunk sent from producer
message VideoChunk {
  string filename = 1;        // Original filename
  bytes data = 2;             // Chunk data
  int64 chunk_number = 3;     // Chunk sequence number
  bool is_last = 4;           // True if this is the last chunk
  int64 total_size = 5;       // Total file size (sent in first chunk)
}

// Response from consumer
message UploadResponse {
  enum Status {
    ACK = 0;           // Chunk received
    QUEUE_FULL = 1;    // Queue is full, upload rejected
    SUCCESS = 2;       // Upload complete
    ERROR = 3;         // Error occurred
  }
  
  Status status = 1;
  string message = 2;
  int64 chunk_number = 3;  // Which chunk is acknowledged
}